--- a/demo/.babelrc
+++ b/demo/.babelrc
@@ -1,12 +1,13 @@
 {
-    "presets":["@babel/preset-react"],
-    "plugins":[
-        ["@babel/plugin-proposal-decorators",{"legacy": true}],
-        ["@babel/plugin-proposal-class-properties",{"loose": true}],
-        ["import", {
-            "libraryName": "antd",
-            "libraryDirectory": "es",
-            "style": "css" // `style: true` 会加载 less 文件
-        }]
-    ]
+  "presets": ["@babel/preset-react"],
+  "plugins": [
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
+    [
+      "import",
+      { "libraryName": "antd", "libraryDirectory": "es", "style": "css" },
+      "antd"
+    ],
+    ["import", { "libraryName": "antd-mobile", "style": "css" }, "antd-mobile"]
+  ]
 }
