--- a/demo/package.json
+++ b/demo/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^3.25.2",
+    "antd-mobile": "^2.3.1",
     "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
