--- a/demo/package.json
+++ b/demo/package.json
@@ -22,6 +22,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-sticky": "^6.0.3",
     "redux": "^4.0.4"
   },
   "devDependencies": {
