--- a/demo/package.json
+++ b/demo/package.json
@@ -34,6 +34,7 @@
     "babel-plugin-import": "^1.12.2",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.20.0",
     "node-sass": "^4.13.0",
     "react-router-dom": "^5.1.2",
     "redux-devtools-extension": "^2.13.8",
