--- a/demo/package.json
+++ b/demo/package.json
@@ -23,13 +23,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
-<<<<<<< HEAD
     "redux": "^4.0.4",
-    "url-loader": "^3.0.0"
-=======
-    "react-sticky": "^6.0.3",
-    "redux": "^4.0.4"
->>>>>>> 9da75025a2c67e309894fe58356e13d886ad6143
+    "url-loader": "^3.0.0",
+    "react-sticky": "^6.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
