--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
+    "http-proxy-middleware": "^0.20.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.5",
     "sass-loader": "^8.0.0",
